# datascience-showcase

./: CHANGELOG.md  Makefile  README.rst  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile
.github/actions/setup/: action.yml
.github/workflows/: publish.yml  version.yml
docs/: notebook-setup.md
notebooks/M4 shift june 2022/: M4 usage analysis June 2022.ipynb
notebooks/player_disconnect_analysis/: Disconnect reason analysis.ipynb
notebooks/template/: template.ipynb
