[project]
name = "pureskillgg-datascience-showcase"
version = "0.0.4"
description = "Showcase of public PureSkill.gg data set applications."
authors = [{ name = "PureSkill.gg", email = "contact@pureskill.gg" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9,<4.0"
dependencies = [
    "numpy>=1.22.3,<2.0.0",
    "pandas>=1.4.1,<2.0.0",
    "python-dotenv>=0.20.0,<0.21.0",
    "pureskillgg-dsdk>=1.0.2b2,<2.0.0",
    "pureskillgg-csgo-dsdk>=1.0.0b2,<2.0.0",
    "requests>=2.27.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/pureskillgg/datascience-showcase"
Repository = "https://github.com/pureskillgg/datascience-showcase"

[dependency-groups]
dev = [
    "black>=22.3.0,<23.0.0",
    "bump2version>=1.0.0,<2.0.0",
    "pylint>=2.4.0,<3.0.0",
    "pytest>=7.1.1,<8.0.0",
    "pytest-cov>=3.0.0,<4.0.0",
    "pytest-runner>=6.0.0,<7.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "twine>=4.0.0,<5.0.0",
    "wheel>=0.38.0",
    "matplotlib>=3.5.1,<4.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "seaborn>=0.11.2,<0.12.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "pureskillgg_datascience_showcase"
